--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
+    "@material-ui/styles": "^4.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "^12.0.8",
     "@types/react": "16.8.22",
     "@types/react-dom": "16.8.4",
     "@types/react-helmet": "^5.0.8",
-    "@types/react-redux": "^7.1.0",
+    "@types/react-redux": "^7.0.9",
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.16",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
