--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.1.1",
+    "@material-ui/icons": "^4.2.0",
     "@material-ui/styles": "^4.1.1",
     "@types/jest": "24.0.15",
     "@types/node": "^12.0.8",
@@ -14,6 +15,7 @@
     "@types/react-router-dom": "^4.3.4",
     "@types/styled-components": "^4.1.16",
     "axios": "^0.19.0",
+    "clsx": "^1.0.4",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
